--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "homepage": "https://github.com/negi524/ddd-sample#readme",
   "dependencies": {
     "typescript": "^4.4.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "2.4.1"
   }
 }
